--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,10 @@
   font-size: 0.9rem;
 }
 
-
-@media print {
-  .print\\:hidden {
-    display: none !important;
-  }
+.input {
+  @apply border border-gray-300 rounded px-2 py-1 w-full text-black;
 }
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
